--- a/src/components/_layout/_layout.pug
+++ b/src/components/_layout/_layout.pug
@@ -62,6 +62,9 @@ html(lang="en")
 			.form-login#auto-login(url-redirect="#")
 				.title
 					p ĐĂNG NHẬP
+				.sub-title
+					p Đăng nhập bằng tài khoản Facebook và Google sẽ được vote 1 lần/ ngày 
+					p Đăng nhập bằng tài khoản VLIVE sẽ được vote 2 lần/ ngày
 				.register
 					.btn.btn-facebook(data-key="415663406248992")
 						a(href="#") Sign up with FaceBook
