--- a/src/components/index/i-4.pug
+++ b/src/components/index/i-4.pug
@@ -21,9 +21,6 @@
 				.row
 					.item
 						.item__wrapper
-							a(href="javascript:;" data-scroll-to="6") ARTIST OF THE YEAR
-					.item
-						.item__wrapper
 							a(href="javascript:;" data-scroll-to="7") BEST VPOP COMEBACK
 					.item
 						.item__wrapper
@@ -34,48 +31,11 @@
 					.item
 						.item__wrapper
 							a(href="javascript:;" data-scroll-to="10") BEST STAGE OF V HEARTBEAT
-	.container.block-vote(data-scroll-id="6")
-		.container-custom.size-1365px
-			.title
-				h3 ARTIST OF THE YEAR
-				p Giải thưởng tôn vinh những nghệ sĩ. hoạt động nghệ thuật xuất sắc trong năm 2019
-			.row-wrapper
-				.row.no-gutters.list-vote
-					.item-vote(data-value=1)
-						figure
-							.box-img
-								img.ofc(src="./assets/images/item-vote/artist_of_the_year/1.jpg", alt="")
-							figcaption
-								h5 VOTE
-					.item-vote(data-value=2)
-						figure
-							.box-img
-								img.ofc(src="./assets/images/item-vote/artist_of_the_year/2.jpg", alt="")
-							figcaption
-								h5 VOTE
-					.item-vote(data-value=3)
-						figure
-							.box-img
-								img.ofc(src="./assets/images/item-vote/artist_of_the_year/3.jpg", alt="")
-							figcaption
-								h5 VOTE
-					.item-vote(data-value=4)
-						figure
-							.box-img
-								img.ofc(src="./assets/images/item-vote/artist_of_the_year/4.jpg", alt="")
-							figcaption
-								h5 VOTE
-					.item-vote(data-value=4)
-						figure
-							.box-img
-								img.ofc(src="./assets/images/item-vote/artist_of_the_year/4.jpg", alt="")
-							figcaption
-								h5 VOTE
 	.container.block-vote(data-scroll-id="7")
 		.container-custom.size-1365px
 			.title
 				h3 BEST VPOP COMBACK
-				p.mw-694 Giải thưởng tôn vinh nghệ sĩ sở hữu tác phẩm “comeback” ấn tượng, tạo xu hướng trong năm 2019
+				p.mw-694 Giải thưởng tôn vinh nghệ sĩ sở hữu tác phẩm “comeback” ấn tượng,. tạo xu hướng trong năm 2019
 			.row-wrapper
 				.row.no-gutters.list-vote
 					.item-vote(data-value=1)
@@ -112,7 +72,7 @@
 		.container-custom.size-1365px
 			.title
 				h3 RISING STAR OF THE YEAR
-				p.mw-405 Giải thưởng tôn vinh nghệ trẻ tài năng, được yêu thích trong năm 2020
+				p.mw-405 Giải thưởng tôn vinh nghệ trẻ tài năng,. được yêu thích trong năm 2020
 			.row-wrapper
 				.row.no-gutters.list-vote
 					.item-vote(data-value=1)
@@ -149,7 +109,7 @@
 		.container-custom.size-1365px
 			.title
 				h3 V MEMBERSHIP COMMUNITY
-				p Giải thưởng tôn vinh công đồng V MEMBERSHIP hoạt động tích cực trên VLIVE trong năm 2020
+				p Giải thưởng tôn vinh công đồng V MEMBERSHIP. hoạt động tích cực trên VLIVE trong năm 2020
 			.row-wrapper
 				.row.no-gutters.list-vote
 					.item-vote(data-value=1)
@@ -187,7 +147,7 @@
 			.title
 				h3 BEST STAGE OF V HEARTBEAT
 				p.mw-510
-					!= "Giải thưởng tôn vinh màn trình diễn được yêu thích trên sân khấu <span> V HEARTBEAT</span> trong năm 2020"
+					!= "Giải thưởng tôn vinh màn trình diễn được yêu thích. trên sân khấu <span> V HEARTBEAT</span> trong năm 2020"
 			.row-wrapper
 				.row.no-gutters.list-vote.border-0
 					.item-vote(data-value=1)
@@ -196,42 +156,56 @@
 								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/1.jpg", alt="")
 							figcaption
 								h5 VOTE
+								h5
+									a(href="") Link
 					.item-vote(data-value=2)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/2.jpg", alt="")
 							figcaption
 								h5 VOTE
+								h5
+									a(href="") Link
 					.item-vote(data-value=3)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/3.jpg", alt="")
 							figcaption
 								h5 VOTE
+								h5
+									a(href="") Link
 					.item-vote(data-value=4)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/4.jpg", alt="")
 							figcaption
 								h5 VOTE
+								h5
+									a(href="") Link
 					.item-vote(data-value=5)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/5.jpg", alt="")
 							figcaption
 								h5 VOTE
+								h5
+									a(href="") Link
 					.item-vote(data-value=6)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/6.jpg", alt="")
 							figcaption
 								h5 VOTE
+								h5
+									a(href="") Link
 					.item-vote(data-value=7)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/7.jpg", alt="")
 							figcaption
 								h5 VOTE
+								h5
+									a(href="") Link
 	.container.block-vote
 		.title
 			p.mw-100 Vị trí nghệ sĩ tại các mục VOTE được sắp xếp theo thứ tự alphabet
