--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -295,6 +295,7 @@
 		.row {
 			margin-left: -40px;
 			margin-right: -40px;
+			justify-content: center;
 		}
 		.item {
 			padding: 0 40px;
@@ -369,6 +370,31 @@
 		&:first-child {
 			margin-top: 90px;
 		}
+		&:nth-child(5) {
+			.item-vote {
+				figure {
+					max-height: 285px;
+					height: 285px;
+					@media (max-width: 1439.98px) {
+						height: auto;
+					}
+				}
+				figcaption {
+					height: fit-content;
+					flex-direction: column;
+					h5 {
+						width: 100%;
+						border-bottom: 1px solid #000000;
+						flex: 0 0 100%;
+						max-width: 100%;
+					}
+				}
+			}
+		}
+		figure {
+			// max-width: 235px;
+			max-height: 235px;
+		}
 		.title {
 			text-align: center;
 			margin-bottom: 20px;
@@ -406,7 +432,6 @@
 			p {
 				color: #fff000;
 				font-size: 23px;
-				max-width: 484px;
 				margin-left: auto;
 				margin-right: auto;
 				text-align: justify;
@@ -438,34 +463,7 @@
 				}
 			}
 		}
-		&:nth-child(3) {
-			.title {
-				p {
-					max-width: 694px;
-				}
-			}
-		}
-		&:nth-child(4) {
-			.title {
-				p {
-					max-width: 405px;
-				}
-			}
-		}
-		&:nth-child(6) {
-			.title {
-				p {
-					max-width: 510px;
-				}
-			}
-		}
-		&:nth-child(7) {
-			.title {
-				p {
-					max-width: 100%;
-				}
-			}
-		}
+	
 	}
 
 	// LAP TOP NHỎ -> DƯỚI 1640px
