--- a/src/scss/globals/utilities.scss
+++ b/src/scss/globals/utilities.scss
@@ -656,7 +656,7 @@ body {
 			}
 		}
 		.btn-vline {
-			background: #00fcff;
+			background: linear-gradient(90deg,#eac722 0,#f78354 51%,#fd28cb 100%);
 			&::after {
 				background: url(../assets/images/new-vline/vline-footer.png) no-repeat;
 				background-size: contain;
