--- a/src/components/index/i-6.pug
+++ b/src/components/index/i-6.pug
@@ -52,22 +52,22 @@
 		.block-video
 			a(data-fancybox data-type="iframe" data-src="https://www.vlive.tv/embed/20428" href="javascript:;" ).item-video
 				.img
-					img.ofc(src="./assets/images/new-vline/item-video.png", alt="")
+					img.ofc(src="./assets/images/new-vline/2016.jpg", alt="")
 				.desc
 					p 2016
 			a(data-fancybox data-type="iframe" data-src="https://www.vlive.tv/embed/52251" href="javascript:;" ).item-video
 				.img
-					img.ofc(src="./assets/images/new-vline/item-video.png", alt="")
+					img.ofc(src="./assets/images/new-vline/2017.jpg", alt="")
 				.desc
 					p 2017
 			a(data-fancybox data-type="iframe" data-src="https://www.vlive.tv/embed/100231" href="javascript:;" ).item-video
 				.img
-					img.ofc(src="./assets/images/new-vline/item-video.png", alt="")
+					img.ofc(src="./assets/images/new-vline/2018.jpg", alt="")
 				.desc
 					p 2018
 			a(data-fancybox data-type="iframe" data-src="https://www.vlive.tv/embed/167537" href="javascript:;" ).item-video
 				.img
-					img.ofc(src="./assets/images/new-vline/item-video.png", alt="")
+					img.ofc(src="./assets/images/new-vline/2019.png", alt="")
 				.desc
 					p 2019
 .rule-pc(data-scroll-id="5")
