--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -459,6 +459,9 @@
 						border-bottom: 1px solid #000000;
 						flex: 0 0 100%;
 						max-width: 100%;
+						a {
+							display: block;
+						}
 					}
 				}
 			}
