--- a/src/components/index/i-4.pug
+++ b/src/components/index/i-4.pug
@@ -156,56 +156,63 @@
 								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/1.jpg", alt="")
 							figcaption
 								h5 VOTE
-								h5
-									a(href="") Link
+						.box-link
+							h5
+								a(href="") Link
 					.item-vote(data-value=2)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/2.jpg", alt="")
 							figcaption
 								h5 VOTE
-								h5
-									a(href="") Link
+						.box-link
+							h5
+								a(href="") Link
 					.item-vote(data-value=3)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/3.jpg", alt="")
 							figcaption
 								h5 VOTE
-								h5
-									a(href="") Link
+						.box-link
+							h5
+								a(href="") Link
 					.item-vote(data-value=4)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/4.jpg", alt="")
 							figcaption
 								h5 VOTE
-								h5
-									a(href="") Link
+						.box-link
+							h5
+								a(href="") Link
 					.item-vote(data-value=5)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/5.jpg", alt="")
 							figcaption
 								h5 VOTE
-								h5
-									a(href="") Link
+						.box-link
+							h5
+								a(href="") Link
 					.item-vote(data-value=6)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/6.jpg", alt="")
 							figcaption
 								h5 VOTE
-								h5
-									a(href="") Link
+						.box-link
+							h5
+								a(href="") Link
 					.item-vote(data-value=7)
 						figure
 							.box-img
 								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/7.jpg", alt="")
 							figcaption
 								h5 VOTE
-								h5
-									a(href="") Link
+						.box-link
+							h5
+								a(href="") Link
 	.container.block-vote
 		.title
 			p.mw-100 Vị trí nghệ sĩ tại các mục VOTE được sắp xếp theo thứ tự alphabet
