--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -454,6 +454,7 @@
 			// max-width: 235px;
 			max-height: 235px;
 			height: 100%;
+			height: 235px;
 			.box-img {
 				height: 100%;
 				img {
