--- a/src/components/index/i-4.pug
+++ b/src/components/index/i-4.pug
@@ -8,7 +8,7 @@
 					a(href="") BÌNH CHỌN
 			.guide-selection
 				p
-					!= `Ấn <span>"VOTE"</span> dưới hình nghệ sĩ mà bạn muốn VOTE trong từng hạng mục`
+					!= `Ấn vào hình <span>"Nghệ sĩ"</span> mà bạn muốn bình chọn trong từng hạng mục`
 				p.mb-30
 					!= `Sau khi đã VOTE cho tất cả các hạng mục, hãy chọn <span>"HOÀN TẤT"</span> bên dưới nhé!`
 				p
@@ -30,7 +30,7 @@
 							a(href="javascript:;" data-scroll-to="9") V MEMBERSHIP COMMUNITY 
 					.item
 						.item__wrapper
-							a(href="javascript:;" data-scroll-to="10") BEST STAGE OF V HEARTBEAT
+							a(href="javascript:;" data-scroll-to="10") BEST. STAGE OF. V HEARTBEAT
 	.container.block-vote(data-scroll-id="7")
 		.container-custom.size-1365px
 			.title
@@ -173,7 +173,7 @@
 							.box-img
 								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/3.jpg", alt="")
 							figcaption
-								h5 VOTE
+								h5 Trịnh Thăng Bình. Liz Kim Cương
 						.box-link
 							h5
 								a(href="") Link
