--- a/src/scss/globals/utilities.scss
+++ b/src/scss/globals/utilities.scss
@@ -494,7 +494,7 @@ body {
 		}
 		.register {
 			@media (max-width: 575.98px) {
-				a {
+				span {
 					display: none;
 				}
 				.btn {
@@ -606,18 +606,20 @@ body {
 		width: 100%;
 		margin: 0 auto;
 		.btn {
+			display: block;
 			height: 73px;
 			border-radius: unset;
 			text-align: center;
 			max-width: 100%;
 			position: relative;
-			a {
+			span {
 				color: #ffffff;
 				display: flex;
 				justify-content: center;
 				align-items: center;
 				height: 100%;
 				font-size: 25px;
+				pointer-events: none;
 			}
 			&::after {
 				content: "";
@@ -646,15 +648,12 @@ body {
 		}
 		.btn-vline {
 			background: #54f7ff;
-			a {
+			span {
 				color: #49515e;
 			}
 			&::after {
 				background: url(../assets/images/new-vline/logo-button.png) no-repeat;
 				background-size: contain;
-			}
-			a {
-				color: #49515e;
 			}
 		}
 	}
