--- a/src/components/index/i-4.pug
+++ b/src/components/index/i-4.pug
@@ -173,7 +173,7 @@
 							.box-img
 								img.ofc(src="./assets/images/item-vote/vhb_stage_of_kpop/3.jpg", alt="")
 							figcaption
-								h5 Trịnh Thăng Bình. Liz Kim Cương
+								h5 Trịnh Thăng Bình, Liz Kim Cương
 						.box-link
 							h5
 								a(href="") Link
