--- a/src/scss/globals/utilities.scss
+++ b/src/scss/globals/utilities.scss
@@ -178,7 +178,8 @@ body {
 					position: absolute;
 					bottom: 0;
 					width: 100%;
-					height: 70px;
+					height: fit-content;
+					min-height: 40px;
 					background: linear-gradient(90deg , #7e2bf9 0%, #ff68da 100%);
 					display: flex;
 					align-items: center;
