--- a/src/components/_layout/_layout.pug
+++ b/src/components/_layout/_layout.pug
@@ -56,7 +56,7 @@ html(lang="en")
 							button#btn-submit.btn GỬI VÀ QUAY LẠI
 				.note
 					p *Mã vé tham dự sẽ được gửi qua điện thoại trong thời gian tới
-		input#checkLogin(type='text' hidden value='true')
+		input#checkLogin(type='text' hidden value='false')
 		.d-none
 			.form-login#auto-login(url-redirect="#")
 				.title
