--- a/src/scss/pages/index.scss
+++ b/src/scss/pages/index.scss
@@ -151,7 +151,7 @@
 					font-family: SFUIDisplay-Heavy;
 					line-height: 1;
 					text-align: right;
-					color: #00fcff;
+					color: rgb(84, 247, 255);
 					@media (max-width: 575.98px) {
 						font-size: 70px;
 					}
