--- a/src/components/index/i-4.pug
+++ b/src/components/index/i-4.pug
@@ -19,18 +19,18 @@
 					!= "Một ngày được tính tính từ <strong>0:00:01</strong> tới <strong>23:59:59</strong>"
 			.block--button-catalog
 				.row
-					.item
+					.item(data-scroll-to="7")
 						.item__wrapper
-							a(href="javascript:;" data-scroll-to="7") BEST VPOP COMEBACK
-					.item
+							a(href="javascript:;" ) BEST VPOP COMEBACK
+					.item(data-scroll-to="8")
 						.item__wrapper
-							a(href="javascript:;" data-scroll-to="8") RISING START OF  THE YEAR
-					.item
+							a(href="javascript:;") RISING START OF  THE YEAR
+					.item(data-scroll-to="9")
 						.item__wrapper
-							a(href="javascript:;" data-scroll-to="9") V MEMBERSHIP COMMUNITY 
-					.item
+							a(href="javascript:;") V MEMBERSHIP COMMUNITY 
+					.item(data-scroll-to="10")
 						.item__wrapper
-							a(href="javascript:;" data-scroll-to="10") BEST. STAGE OF. V HEARTBEAT
+							a(href="javascript:;") BEST. STAGE OF. V HEARTBEAT
 	.container.block-vote(data-scroll-id="7")
 		.container-custom.size-1365px
 			.title
