--- a/src/components/index/i-1.pug
+++ b/src/components/index/i-1.pug
@@ -7,7 +7,7 @@
 						img.ofc(src="./assets/images/new-vline/banner-4.jpg", alt="", srcset="")
 			.swiper-slide
 				.video(data-url="")
-					iframe(src="https://www.vlive.tv/embed/225569?autoPlay=false",  frameborder='no' scrolling='no' marginwidth='0' marginheight='0' WIDTH='100%' HEIGHT='100%' allowfullscreen)
+					iframe(src="https://www.vlive.tv/embed/229567?autoPlay=true",  frameborder='no' scrolling='no' marginwidth='0' marginheight='0' WIDTH='100%' HEIGHT='100%' allowfullscreen)
 			.swiper-slide
 				a(href="").img
 						img.ofc(src="./assets/images/new-vline/banner-3.png", alt="", srcset="")
