--- a/src/components/index/i-5.pug
+++ b/src/components/index/i-5.pug
@@ -6,23 +6,22 @@
 					a(href="#").img
 						img.ofc(src='./assets/images/new-vline/logo-heartbeat.png', alt='')
 			.iamgeMapCanvas
-				.image-canvas
-					map(name='imagemap')
-						<area shape="circle" coords="445, 180, 125" href="https://channels.vlive.tv/AA1AA3" alt="Văn Mai Hương" target="_blank" alt="Văn Mai Hương" title="Văn Mai Hương" />
-						<area shape="circle" coords="185, 245, 100" href="https://channels.vlive.tv/AA1AA3" alt="Phan Duy Anh" target="_blank" alt="Phan Duy Anh" title="Phan Duy Anh" />
-						<area shape="circle" coords="380, 440, 115" href="https://channels.vlive.tv/AA1AA3" alt="Trịnh Thăng Bình" target="_blank" alt="Trịnh Thăng Bình" title="Trịnh Thăng Bình" />
-						<area shape="circle" coords="110, 470, 100" href="https://channels.vlive.tv/AA1AA3" alt="Jang Mi" target="_blank" alt="Jang Mi" title="Jang Mi" />
-						<area shape="circle" coords="140, 670, 85" href="https://channels.vlive.tv/AA1AA3" alt="JUKY SAN" target="_blank" alt="JUKY SAN" title="JUKY SAN" />
-						<area shape="circle" coords="335, 660, 95" href="https://channels.vlive.tv/AA1AA3" alt="COLOR" target="_blank" alt="COLOR" title="COLOR" />
-						<area shape="circle" coords="600, 610, 110" href="https://channels.vlive.tv/AA1AA3" alt="LIZ KIM CƯƠNG" target="_blank" alt="LIZ KIM CƯƠNG" title="LIZ KIM CƯƠNG" />
-						<area shape="circle" coords="975, 610, 110" href="https://channels.vlive.tv/AA1AA3" alt="MINH VƯƠNG M4U" target="_blank" alt="MINH VƯƠNG M4U" title="MINH VƯƠNG M4U" />
-						<area shape="circle" coords="1220, 660, 95" href="https://channels.vlive.tv/AA1AA3" alt="LIL ZPOET" target="_blank" alt="LIL ZPOET" title="LIL ZPOET" />
-						<area shape="circle" coords="1425, 670, 85" href="https://channels.vlive.tv/AA1AA3" alt="MANBO" target="_blank" alt="MANBO" title="MANBO" />
-						<area shape="circle" coords="1460, 470, 100" href="https://channels.vlive.tv/AA1AA3" alt="HIEUTHUHAI" target="_blank" alt="HIEUTHUHAI" title="HIEUTHUHAI" />
-						<area shape="circle" coords="1200, 440, 115" href="https://channels.vlive.tv/AA1AA3" alt="Trọng hiếu" target="_blank" alt="Trọng hiếu" title="Trọng hiếu" />
-						<area shape="circle" coords="1390, 245, 110" href="https://channels.vlive.tv/AA1AA3" alt="SUPER9" target="_blank" alt="SUPER9" title="SUPER9" />
-						<area shape="circle" coords="1130, 180, 125" href="https://channels.vlive.tv/AA1AA3" alt="ƯNG HOÀNG PHÚC" target="_blank" alt="ƯNG HOÀNG PHÚC" title="ƯNG HOÀNG PHÚC" />
-
-				.image-map
-					img(src='./assets/images/new-vline/banner.png', alt='', usemap='#imagemap')
+				//- .image-canvas
+				//- 	map(name='imagemap')
+				//- 		<area shape="circle" coords="445, 180, 125" href="https://channels.vlive.tv/AA1AA3" alt="Văn Mai Hương" target="_blank" alt="Văn Mai Hương" title="Văn Mai Hương" />
+				//- 		<area shape="circle" coords="185, 245, 100" href="https://channels.vlive.tv/AA1AA3" alt="Phan Duy Anh" target="_blank" alt="Phan Duy Anh" title="Phan Duy Anh" />
+				//- 		<area shape="circle" coords="380, 440, 115" href="https://channels.vlive.tv/AA1AA3" alt="Trịnh Thăng Bình" target="_blank" alt="Trịnh Thăng Bình" title="Trịnh Thăng Bình" />
+				//- 		<area shape="circle" coords="110, 470, 100" href="https://channels.vlive.tv/AA1AA3" alt="Jang Mi" target="_blank" alt="Jang Mi" title="Jang Mi" />
+				//- 		<area shape="circle" coords="140, 670, 85" href="https://channels.vlive.tv/AA1AA3" alt="JUKY SAN" target="_blank" alt="JUKY SAN" title="JUKY SAN" />
+				//- 		<area shape="circle" coords="335, 660, 95" href="https://channels.vlive.tv/AA1AA3" alt="COLOR" target="_blank" alt="COLOR" title="COLOR" />
+				//- 		<area shape="circle" coords="600, 610, 110" href="https://channels.vlive.tv/AA1AA3" alt="LIZ KIM CƯƠNG" target="_blank" alt="LIZ KIM CƯƠNG" title="LIZ KIM CƯƠNG" />
+				//- 		<area shape="circle" coords="975, 610, 110" href="https://channels.vlive.tv/AA1AA3" alt="MINH VƯƠNG M4U" target="_blank" alt="MINH VƯƠNG M4U" title="MINH VƯƠNG M4U" />
+				//- 		<area shape="circle" coords="1220, 660, 95" href="https://channels.vlive.tv/AA1AA3" alt="LIL ZPOET" target="_blank" alt="LIL ZPOET" title="LIL ZPOET" />
+				//- 		<area shape="circle" coords="1425, 670, 85" href="https://channels.vlive.tv/AA1AA3" alt="MANBO" target="_blank" alt="MANBO" title="MANBO" />
+				//- 		<area shape="circle" coords="1460, 470, 100" href="https://channels.vlive.tv/AA1AA3" alt="HIEUTHUHAI" target="_blank" alt="HIEUTHUHAI" title="HIEUTHUHAI" />
+				//- 		<area shape="circle" coords="1200, 440, 115" href="https://channels.vlive.tv/AA1AA3" alt="Trọng hiếu" target="_blank" alt="Trọng hiếu" title="Trọng hiếu" />
+				//- 		<area shape="circle" coords="1390, 245, 110" href="https://channels.vlive.tv/AA1AA3" alt="SUPER9" target="_blank" alt="SUPER9" title="SUPER9" />
+				//- 		<area shape="circle" coords="1130, 180, 125" href="https://channels.vlive.tv/AA1AA3" alt="ƯNG HOÀNG PHÚC" target="_blank" alt="ƯNG HOÀNG PHÚC" title="ƯNG HOÀNG PHÚC" />
+				a(href="https://www.vlive.tv/video/229567").image-map
+					img(src='./assets/images/new-vline/FA_KV_Vlive_Done.jpg', alt='', usemap='#imagemap')
 
