--- a/src/components/index/i-1.pug
+++ b/src/components/index/i-1.pug
@@ -11,6 +11,9 @@
 			.swiper-slide
 				a(href="").img
 						img.ofc(src="./assets/images/new-vline/banner-3.png", alt="", srcset="")
+			.swiper-slide
+				a(href="").img
+						img.ofc.h-0(src="./assets/images/new-vline/FA_KV_Vlive_Done.jpg", alt="", srcset="")
 	.swiper-pagination
 	.swiper-button-next
 	.swiper-button-prev
