--- a/src/components/_layout/_layout.pug
+++ b/src/components/_layout/_layout.pug
@@ -60,17 +60,18 @@ html(lang="en")
 		.d-none
 			.form-login#auto-login(url-redirect="#")
 				.title
-					p ĐĂNG NHẬP
-				.sub-title
-					p Đăng nhập bằng tài khoản Facebook và Google sẽ được vote 1 lần/ ngày 
-					p Đăng nhập bằng tài khoản VLIVE sẽ được vote 2 lần/ ngày
-				.register
-					a.btn.btn-facebook(href="" data-key="415663406248992")
-						span Sign up with FaceBook
-					a.btn.btn-google(href="" data-key="111231613981-4ar5t5o0nmb5aon7f4eal155954didl4.apps.googleusercontent.com")
-						span Sign up with google
-					a.btn.btn-vline(href="" data-key="111231613981-4ar5t5o0nmb5aon7f4eal155954didl4.apps.googleusercontent.com")
-						span Sign up with Vline
+					p
+						!= "Thời gian bình chọn Vlive awards 2020 đã kết thúc. Hãy đón xem kết quả vào ngày 16.01 lúc 19:00 tại chương trình Vheartbeat - year end party 2020 - Link xem: <a href='https://www.vlive.tv/video/229981' style='color:blue'>https://www.vlive.tv/video/229981</a>"
+				//- .sub-title
+				//- 	p Đăng nhập bằng tài khoản Facebook và Google sẽ được vote 1 lần/ ngày 
+				//- 	p Đăng nhập bằng tài khoản VLIVE sẽ được vote 2 lần/ ngày
+				//- .register
+				//- 	a.btn.btn-facebook(href="" data-key="415663406248992")
+				//- 		span Sign up with FaceBook
+				//- 	a.btn.btn-google(href="" data-key="111231613981-4ar5t5o0nmb5aon7f4eal155954didl4.apps.googleusercontent.com")
+				//- 		span Sign up with google
+				//- 	a.btn.btn-vline(href="" data-key="111231613981-4ar5t5o0nmb5aon7f4eal155954didl4.apps.googleusercontent.com")
+				//- 		span Sign up with Vline
 		block scripts
 		script(type="text/javascript", src="https://www.youtube.com/iframe_api")
 		script(type="text/javascript", src='https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v3.3')
