--- a/src/components/index/i-4.pug
+++ b/src/components/index/i-4.pug
@@ -217,6 +217,6 @@
 		.title
 			p.mw-100 Vị trí nghệ sĩ tại các mục VOTE được sắp xếp theo thứ tự alphabet
 	.btn-selection.shadow
-		button#btn-vote(data-url="#") HOÀN TẤT
+		button#btn-vote(data-url="#") Thời gian bình chọn đã kết thúc
 .vector
 	img(src="./assets/images/new-vline/vector.png", alt="")
