--- a/src/scss/globals/utilities.scss
+++ b/src/scss/globals/utilities.scss
@@ -268,7 +268,8 @@ body {
 
 .btn-selection {
 	background: linear-gradient(6deg , #ff05f0 0%,#fd71da 100%);
-	max-width: 238px;
+	// max-width: 238px;
+	max-width: fit-content;
 	width: 100%;
 	height: 74px;
 	margin: 0 auto;
@@ -284,6 +285,9 @@ body {
 		font-size: 40px;
 		color: #ffffff;
 		padding: 0 5px;
+		@media (max-width: 767.98px) {
+			font-size: 25px;
+		}
 	}
 }
 
@@ -488,6 +492,10 @@ body {
 		}
 	}
 	&#auto-login {
+		@media (max-width: 575.98px) {
+			padding-left: 10px;
+			padding-right: 10px;
+		}
 		.sub-title {
 			font-size: 16px;
 			color: #000000;
@@ -512,10 +520,14 @@ body {
 			&:first-child {
 				text-align: center;
 				color: #000000;
-				font-size: 50px;
+				// font-size: 50px;
+				font-size: 20px;
 				font-family: SFUIDisplay-Black;
-				@media (max-width: 575.98px) {
-					font-size: 35px;
+				// @media (max-width: 575.98px) {
+				// 	font-size: 35px;
+				// }
+				a {
+					word-break: break-word;
 				}
 			}
 			&:not(:first-child) {
